2007-01-30  Akim Demaille  <demaille@gostai.com>

	Make foo-ci more useful
	* svn-externals.mk (SVN): Defaults to svn-wrapper.sh, not svn.
	There is a nasty problem when we run "make libport-ci
	SVN=svn-wrapper.sh" for instance: in that case SVN is exported
	by make, and svn-wrapper.sh read the envvar SVN to look for the
	real SVN.  And there comes the endless loop of recursive svn-wrapper
	invocations.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Treat MS warnings as the others
	* build-aux/urbi-prog-cxx.m4: here.
	* build-aux/init.mk (AM_CXXFLAGS): Don't use the dead MSVC_CXXFLAGS
	variable.

2007-01-21  Akim Demaille  <akim@lrde.epita.fr>

	URBI_LIBPORT_INSTALLED
	* urbi-libport.m4 (URBI_LIBPORT_INSTALLED): New.

2007-01-20  Akim Demaille  <akim@lrde.epita.fr>

	Don't use status as a shell var name
	* build-aux/check.mk: It is read-only in Zsh.

2007-01-20  Akim Demaille  <akim@lrde.epita.fr>

	Add missing empty line for rst titles
	* check.mk (am__rst_section, am__rst_subsection): here.

2007-01-20  Akim Demaille  <demaille@gostai.com>

	vc80.pdb
	* init.mk (CLEANFILES): Remove it.
	(AM_CXXFLAGS): Include $(MSVC_CXXFLAGS).
	* urbi-prog-cxx.m4: Don't.

2007-01-19  Akim Demaille  <demaille@gostai.com>

	-Werror
	* urbi-prog-cxx.m4: Handle it here.

2007-01-15  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Address portability issues for Cygwin/Mingw32
	* urbi-with-openssl.m4: Add library and header OpenSSL default paths.

2007-01-14  Akim Demaille  <akim.demaille@free.fr>

	Don't create and dump the log file if there is no failure
	* build-aux/check.mk: I.e., put the "if" at the right place.
	Also, use a tmp file and move it when done.

2007-01-11  Akim Demaille  <demaille@gostai.com>

	Separate sections
	* check.mk: When compiling the logs, prepend an empty line.

2007-01-09  Thomas Moulard  <thomas.moulard@lrde.epita.fr>

	Correct wrong behavior in OpenSSL macro.
	* urbi-with-openssl.m4: Correct behavior.
